# routes/user.js
@@ -52,6 +52,48 @@ router.get('/favorites', async (req, res, next) => {
   }
 });
 
+router.get('/last_watched', async (req, res, next) => {
+  try {
+    const user_name = req.session.user_name;
+    const lastWatchedIds = await user_utils.getLastWatchedRecipesIds(user_name);
+    const lastWatched = await recipe_utils.getRecipesPreview(lastWatchedIds);
+    res.status(200).send(lastWatched);
+  } catch (error) {
+    next(error);
+  }
+})
+
+router.get('/my_recipes', async (req, res, next) => {
+  try {
+    const user_name = req.session.user_name;
+    const myRecipes = await user_utils.getMyRecipes(user_name);
+    res.status(200).send(myRecipes);
+  } catch (error) {
+    next(error);
+  }
+})
+
+router.post('/add_recipe', async (req, res, next) => {
+  try {
+    const user_name = req.session.user_name;
+    let recipe_details = {
+      title: req.body.title,
+      readyInMinutes: req.body.readyInMinutes,
+      image: req.body.image,
+      popularity: 0,
+      vegan: req.body.vegan,
+      vegetarian: req.body.vegetarian,
+      glutenFree: req.body.glutenFree,
+      ingredients: req.body.ingredients.list,
+      instructions: req.body.instructions,
+      servings: req.body.servings
+    }
+    await user_utils.addRecipeToDb(user_name, recipe_details);
+    res.status(200).send("The Recipe successfully saved to storage");
+  } catch (error) {
+    next(error);
+  }
+})
 
 
 
